--- a/N1EEZB.WPF/N1EEZB.WPF.csproj
+++ b/N1EEZB.WPF/N1EEZB.WPF.csproj
@@ -35,7 +35,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -90,6 +97,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -97,9 +105,19 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\N1EEZB.Data\N1EEZB.Data.csproj">
+      <Project>{7eb4804b-8b3a-4c5b-adbc-1ef9f3afe361}</Project>
+      <Name>N1EEZB.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\N1EEZB.GS1Barcodes\N1EEZB.GS1Barcodes.csproj">
+      <Project>{d7b3e7dc-e4ad-44b8-855c-837e8031967c}</Project>
+      <Name>N1EEZB.GS1Barcodes</Name>
+    </ProjectReference>
     <ProjectReference Include="..\N1EEZB.MessageBoxes\N1EEZB.MessageBoxes.csproj">
       <Project>{b5d4d0e0-5077-4a28-aaa4-04c59f7638a6}</Project>
       <Name>N1EEZB.MessageBoxes</Name>
