--- a/N1EEZB.GS1Barcodes.Test/N1EEZB.GS1Barcodes.Test.csproj
+++ b/N1EEZB.GS1Barcodes.Test/N1EEZB.GS1Barcodes.Test.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTestDateParser.cs" />
     <Compile Include="UnitTestApplicationIdentifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApplicationIdentifiers.cs" />
