--- a/N1EEZB.WPF/App.config
+++ b/N1EEZB.WPF/App.config
@@ -14,7 +14,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbProductionContext" connectionString="data source=.\SQLEXPRESS;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <!--add name="DbProductionContext" connectionString="data source=(localdb)\v11.0;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/-->
+    <!--<add name="DbProductionContext" connectionString="data source=.\SQLEXPRESS;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="DbProductionContext" connectionString="data source=(localdb)\v11.0;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
