--- a/N1EEZB.Data/App.config
+++ b/N1EEZB.Data/App.config
@@ -11,7 +11,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbProductionContext" connectionString="data source=.\SQLEXPRESS;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <!--<add name="DbProductionContext" connectionString="data source=(localdb)\v11.0;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
+    <!--<add name="DbProductionContext" connectionString="data source=.\SQLEXPRESS;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
+    <add name="DbProductionContext" connectionString="data source=(localdb)\v11.0;initial catalog=Production;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
